Fix lazy load spinner layout issue

--- a/_src/scss/modules/_admin.scss
+++ b/_src/scss/modules/_admin.scss
@@ -69,6 +69,7 @@
 				.sui-box-selector input + span {
 					padding-top: 17px;
 					padding-bottom: 17px;
+					position: relative;
 
 					img {
 						max-width: 16px;
